--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100vh;
   padding: 0 20px;
+  overflow: hidden;
 }
 .main-placeholder {
   width: 100%;
